@@ -16,6 +16,7 @@
 #define fbCombineAtopReverseU _cairo_pixman_combine_atop_reverse_u
 #define fbCombineAtopU _cairo_pixman_combine_atop_u
 #define fbCombineClear _cairo_pixman_combine_clear
+#define fbCombineClearC _cairo_pixman_combine_clear_c
 #define fbCombineConjointAtopC _cairo_pixman_combine_conjoint_atop_c
 #define fbCombineConjointAtopReverseC _cairo_pixman_combine_conjoint_atop_reverse_c
 #define fbCombineConjointAtopReverseU _cairo_pixman_combine_conjoint_atop_reverse_u
@@ -86,6 +87,25 @@
 #define fbCombineSrcU _cairo_pixman_combine_src_u
 #define fbCombineXorC _cairo_pixman_combine_xor_c
 #define fbCombineXorU _cairo_pixman_combine_xor_u
+#define fbComposeSetupMMX _cairo_pixman_compose_setup_mmx
+#define fbCompositeCopyAreammx _cairo_pixman_composite_copy_area_mmx
+#define fbCompositeSolidMaskSrc_nx8x8888mmx _cairo_pixman_composite_solid_mask_src_nx8x8888mmx
+#define fbCompositeSolidMask_nx8888x0565Cmmx _cairo_pixman_composite_solid_mask_nx8888x0565Cmmx
+#define fbCompositeSolidMask_nx8888x8888Cmmx _cairo_pixman_composite_solid_mask_nx8888x8888Cmmx
+#define fbCompositeSolidMask_nx8x0565mmx _cairo_pixman_composite_solid_mask_nx8x0565mmx
+#define fbCompositeSolidMask_nx8x8888mmx _cairo_pixman_composite_solid_mask_nx8x8888mmx
+#define fbCompositeSolid_nx0565mmx _cairo_pixman_composite_solid_nx0565mmx
+#define fbCompositeSolid_nx8888mmx _cairo_pixman_composite_solid_nx8888mmx
+#define fbCompositeSrcAdd_8000x8000mmx _cairo_pixman_composite_src_add_8000x8000mmx
+#define fbCompositeSrcAdd_8888x8888mmx _cairo_pixman_composite_src_add_8888x8888mmx
+#define fbCompositeSrc_8888RevNPx0565mmx _cairo_pixman_composite_src_8888RevNPx0565mmx
+#define fbCompositeSrc_8888RevNPx8888mmx _cairo_pixman_composite_src_8888RevNPx8888_mmx
+#define fbCompositeSrc_8888x8888mmx _cairo_pixman_composite_src_8888x8888mmx
+#define fbCompositeSrc_8888x8x8888mmx _cairo_pixman_composite_src_8888x8x8888mmx
+#define fbCompositeSrc_x888x8x8888mmx _cairo_pixman_composite_src_x888x8x8888mmx
+#define fbCopyAreammx _cairo_pixman_copy_area_mmx
+#define fbHaveMMX _cairo_pixman_have_mmx
+#define fbSolidFillmmx _cairo_pixman_solid_fill_mmx
 #define fbCompositeSolidMask_nx1xn _cairo_pixman_composite_solid_mask_nx1xn
 #define fbCompositeSolidMask_nx8888x0565 _cairo_pixman_composite_solid_mask_nx8888x0565
 #define fbCompositeSolidMask_nx8888x0565C _cairo_pixman_composite_solid_mask_nx8888x0565_c
@@ -300,3 +320,4 @@
 #define RenderLineFixedEdgeInit _cairo_pixman_render_line_fixed_edge_init
 #define RenderSampleCeilY _cairo_pixman_render_sample_ceil_y
 #define RenderSampleFloorY _cairo_pixman_render_sample_floor_y
+#define composeFunctions _cairo_pixman_compose_functions
